ags (2.0.32)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* 

ags (2.0.31)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented missing properties AgsAudio:min-audio-channels, AgsAudio:min-output-pads and AgsAudio:min-input-pads
	* fixed ags_recycling_context_remove() potential memory corruption
	* populated ags_audio_buffer_util_test.c
	* added ags_char_buffer_util_test.c skelleton
	* added ags_devin_test.c
	* added ags_fifoout_test.c
	* added ags_midi_test.c
	* added ags_track_test.c
	* added ags_recall_id_test.c
	* added ags_recycling_context_test.c

ags (2.0.30)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed compiler error

ags (2.0.29)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_buffer_test_duplicate() to pass on x86 systems

ags (2.0.28)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed wrong types in ags_buffer.c
	* fixed wrong types in ags_jack_client.c
	* populated partially ags_audio_buffer_util_test.c

ags (2.0.27)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_ladspa_browser_callbacks.c to obtain GtkComboBox model
	* fixed missing property AgsLadspaConversion:samplerate
	* fixed prototypes in ags_synth_util.h
	* added ags_buffer_util_test.c
	* added ags_ladspa_conversion_test.c
	* added ags_lv2_conversion_test.c
	* added ags_plugin_port_test.c

ags (2.0.26)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added ags_conversion_test.c
	* added ags_wave_test.c
	* added ags_buffer_test.c

ags (2.0.25)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added shortcuts to fluid soundfonts and hydrogen drumkits
	* improved default size of AgsConnectionEditor
	* improved all labels upper-case of AgsNotationToolbar, AgsAutomationToolbar and AgsWaveToolbar
	* fixed check child == NULL in ags_output_listing_editor.c and ags_input_listing_editor.c
	* fixed missing include in gsequencer_main.c
